[ci skip] Initial RecyclerContainer implementation
Former-commit-id: 2fda944f9c61bb2f84f8e0fd605b6e5d05f3619e

--- a/src/meson.build
+++ b/src/meson.build
@@ -120,6 +120,7 @@ sources = [
 	'ui/views/GameDetailsView/blocks/GOGDetails.vala',
 	'ui/views/GameDetailsView/blocks/SteamDetails.vala',
 
+	'ui/widgets/RecyclerContainer.vala',
 	'ui/widgets/AutoSizeImage.vala',
 	'ui/widgets/ActionButton.vala',
 	'ui/widgets/FileChooserEntry.vala',
